# LightSync

./: .gitignore  CMakeLists.txt  LightSync.sln  README.md
LightSync/: Alienware.cpp  LightSync.cpp  LightSync.csproj  LightSync.sln  LightSync.vcxproj  LightSync.vcxproj.filters  Program.cs  getHardware.cpp  mode.cpp
LightSync/Hardware/Alienware/: AlienwareFX.cpp
LightSync/Hardware/Alienware/Headers/: LFX2.h  LFXDecl.h
LightSync/Hardware/Logitech/: LogitechGSDK.cs
LightSync/Headers/: config.h
LightSync/Headers/Alienware/: alienware.h
LightSync/Headers/io/: staticColor.h
LightSync/Headers/logic/: color.h
LightSync/logic/: color.cpp
LightSync/x64/Debug/: LightSync.exe.recipe  LightSync.ilk  LightSync.vcxproj.FileListAbsolute.txt  vc143.idb
LightSync/x64/Debug/LightSync.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  LightSync.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
include/: LightSync.h
src/: LightSync.cpp  main.cpp
